--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,4 @@ services:
       - key: SECRET_KEY
         value: YOUR_SECRET_KEY
       - key: ALLOWED_HOSTS
-        value: YOUR_RENDER_DOMAIN
+        value: https://florishapp.onrender.com/N
